--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@
 *.exe
 *.out
 *.app
+
+# Agregados
+*~
+CMakeFiles*
+CMakeCache*
+cmake_install*
+Makefile*
+CTestTestfile*
+build/*
+Testing/*
+files/*
