--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ addons:
 
 
 install:
+  - echo 'INSTALL'
   - export CXX="g++-4.8"
   - g++ --version
 
 
 script:
+  - echo 'SCRIPT'
   - g++ src/main.cpp -o holaMundo
   - ./holaMundo
 
