termina merge de hash_db y develop

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ Debug/*
 .project
 DB/*
 .settings
+passwords/000003.log passwords/CURRENT passwords/IDENTITY passwords/LOCK passwords/LOG passwords/MANIFEST-000001
+passwords/
+perfiles/
+sesiones/
