--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,10 @@ if(test)
 
 	#Agrego todos los archivos de TEST
 	file(GLOB SOURCE_TEST "test/*" )
-	set(SOURCE2 src/basededatos.cpp src/jsoncpp.cpp src/logger.cpp src/mongoose.c src/parserJson.cpp src/server.cpp src/manejadorDeUsuarios.cpp src/mapDB.cpp)
-	#file(GLOB SOURCE2 "src/*" )
-	#list(REMOVE_ITEM SOURCE2 src/main.cpp)
+
+	file(GLOB SOURCE2 "src/*" )
+	list(FIND SOURCE2 src/main.cpp indice)
+	list(REMOVE_AT SOURCE2 indice)
 	add_executable(unitTest ${SOURCE2} ${SOURCE_TEST} ${INCLUDES})
 
 	#Agrego librerias externas
