permite compilar los tests sin rocksdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,29 +18,31 @@ add_executable(udrive ${SOURCE} ${INCLUDES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAG} -g -std=c++11 -pthread")
 
-#Agrego librerias externas
-include_directories(librocksdb)
-add_library(librocksdb STATIC IMPORTED)
-set_property(TARGET librocksdb PROPERTY IMPORTED_LOCATION /usr/local/lib/librocksdb.a)
+if (rocksdb)
+	#Agrego librerias externas
+	include_directories(librocksdb)
+	add_library(librocksdb STATIC IMPORTED)
+	set_property(TARGET librocksdb PROPERTY IMPORTED_LOCATION /usr/local/lib/librocksdb.a)
 
-include_directories(libz)
-add_library(libz STATIC IMPORTED)
-set_property(TARGET libz PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libz.a)
+	include_directories(libz)
+	add_library(libz STATIC IMPORTED)
+	set_property(TARGET libz PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libz.a)
 
-include_directories(libsnappy)
-add_library(libsnappy STATIC IMPORTED)
-set_property(TARGET libsnappy PROPERTY IMPORTED_LOCATION /usr/lib/libsnappy.a)
+	include_directories(libsnappy)
+	add_library(libsnappy STATIC IMPORTED)
+	set_property(TARGET libsnappy PROPERTY IMPORTED_LOCATION /usr/lib/libsnappy.a)
 
-include_directories(libbz2)
-add_library(libbz2 STATIC IMPORTED)
-set_property(TARGET libbz2 PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libbz2.a)
+	include_directories(libbz2)
+	add_library(libbz2 STATIC IMPORTED)
+	set_property(TARGET libbz2 PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libbz2.a)
 
-include_directories(libgflags)
-add_library(libgflags STATIC IMPORTED)
-set_property(TARGET libgflags PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libgflags.a)
+	include_directories(libgflags)
+	add_library(libgflags STATIC IMPORTED)
+	set_property(TARGET libgflags PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libgflags.a)
 
-#Linkeo librerias externas al ejecutable
-target_link_libraries(udrive librocksdb libz libsnappy libbz2 libgflags)
+	#Linkeo librerias externas al ejecutable
+	target_link_libraries(udrive librocksdb libz libsnappy libbz2 libgflags)
+endif()
 
 if(test)
 	enable_testing()
@@ -65,16 +67,20 @@ if(test)
 
 	#Agrego librerias externas
 	find_package(GTest REQUIRED)
-	include_directories(/usr/include/gtest)
+	include_directories($ENV{INCLUDE}/gtest)
 
 	include_directories(libgtest_main)
 	add_library(libgtest_main STATIC IMPORTED)
-	set_property(TARGET libgtest_main PROPERTY IMPORTED_LOCATION /usr/lib/libgtest_main.a)
+	set_property(TARGET libgtest_main PROPERTY IMPORTED_LOCATION $ENV{LIB}/libgtest_main.a)
 
 	include_directories(libgtest)
 	add_library(libgtest STATIC IMPORTED)
-	set_property(TARGET libgtest PROPERTY IMPORTED_LOCATION /usr/lib/libgtest.a)
+	set_property(TARGET libgtest PROPERTY IMPORTED_LOCATION $ENV{LIB}/libgtest.a)
 
 	#Linkeo librerias externas al ejecutable de test
-	target_link_libraries(unitTest libgtest libgtest_main librocksdb libz libsnappy libbz2 libgflags)
+	if (NOT rocksdb)
+		target_link_libraries(unitTest libgtest libgtest_main)
+	else()
+		target_link_libraries(unitTest libgtest libgtest_main librocksdb libz libsnappy libbz2 libgflags)
+	endif()
 endif()
