agrega script de build
Parámetros:
-t      Compila tests
-r      Incluye rocksdb
-c      Evalúa coverage (implica -t)
-x      Ejecuta el servidor (implica -r)

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
   - cd build
 
 script:
-  - cmake -Dtest=ON -Drocksdb=OFF ../; make unitTest; ./unitTest 
+  - ./compilar -t
 
 
 # cache:
