corrige compilacion en travis - no usa script build por exports

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,8 @@ before_script:
   - ls $LIB
   - ls $INCLUDE/gtest/
 
+  - mkdir build
+  - cd build 
+
 script:
-  - ./build.sh -t
+  - cmake -Dtest=ON -Drocksdb=OFF ../ && make unitTest && ./unitTest
