--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: false
-language: cpp
+language: python
 compiler: gcc
+python: 
+  - "2.7"
 
 addons:
   apt:
@@ -10,10 +12,16 @@ addons:
     - gcc-4.9
     - g++-4.9
     - libgtest-dev
+    - pip
+
+
+before_install:
+  - pip install --upgrade pip
 
 install:
   - export CXX="g++-4.9"
   - g++ --version
+  - pip install requests
 
 before_script:
   - chmod +x travis/*
@@ -40,4 +48,4 @@ before_script:
   - cd build 
 
 script:
-  - cmake -Dtest=ON -Drocksdb=OFF ../ && make unitTest && ./unitTest
+  - cmake -Dtest=ON -Drocksdb=OFF ../ && make unitTest && ./unitTest && make udrive && python ../test/server_test.py
