--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(include/ include/db/)
 set(PROJ ${CMAKE_CURRENT_LIST_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread")
+set(CFLAGS "-W -Wall -pthread -g -O0 -DMONGOOSE_ENABLE_THREADS ${CFLAGS_EXTRA}")
 
 
 ########## COVERAGE ##########
