--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,8 @@ include_directories(include/ include/db/)
 
 set(PROJ ${CMAKE_CURRENT_LIST_DIR})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread")
-set(CFLAGS "-W -Wall -pthread -g -O0 -DMONGOOSE_ENABLE_THREADS ${CFLAGS_EXTRA}")
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread -DMONGOOSE_ENABLE_THREADS")
+set(CMAKE_C_FLAGS "${CFLAGS_EXTRA} ${CFLAGS} -W -Wall -pthread -g -O0 -DMONGOOSE_ENABLE_THREADS")
 
 ########## COVERAGE ##########
 
